disks/pc/dos/microsoft/3.30/README.md
---
layout: page
title: Microsoft MS-DOS 3.30
permalink: /disks/pc/dos/microsoft/3.30/
redirect_from:
  - /disks/pc/dos/microsoft/3.30a/
---

Microsoft MS-DOS 3.30
---

### Directory of MS-DOS 3.30 (Disk 1)

	 Volume in drive A is MS330APP01 

	Directory of A:\

	IO       SYS     22398 02-02-88  12:00a
	MSDOS    SYS     30128 02-02-88  12:00a
	4201     CPI     17089 02-02-88  12:00a
	5202     CPI       459 02-02-88  12:00a
	ANSI     SYS      1647 02-02-88  12:00a
	APPEND   EXE      5794 02-02-88  12:00a
	ASSIGN   COM      1530 02-02-88  12:00a
	ATTRIB   EXE     10656 02-02-88  12:00a
	CHKDSK   COM      9819 02-02-88  12:00a
	COMMAND  COM     25308 02-02-88  12:00a
	COMP     COM      4183 02-02-88  12:00a
	COUNTRY  SYS     11254 02-02-88  12:00a
	DISKCOMP COM      5848 02-02-88  12:00a
	DISKCOPY COM      6264 02-02-88  12:00a
	DISPLAY  SYS     11259 02-02-88  12:00a
	DRIVER   SYS      1165 02-02-88  12:00a
	EDLIN    COM      7495 02-02-88  12:00a
	EXE2BIN  EXE      3050 02-02-88  12:00a
	FASTOPEN EXE      3888 02-02-88  12:00a
	FDISK    COM     48983 02-02-88  12:00a
	FIND     EXE      6403 02-02-88  12:00a
	FORMAT   COM     11671 02-02-88  12:00a
	GRAFTABL COM      6136 02-02-88  12:00a
	GRAPHICS COM     13943 02-02-88  12:00a
	JOIN     EXE      9612 02-02-88  12:00a
	KEYB     COM      9041 02-02-88  12:00a
	LABEL    COM      2346 02-02-88  12:00a
	MODE     COM     15440 02-02-88  12:00a
	MORE     COM       282 02-02-88  12:00a
	NLSFUNC  EXE      3029 02-02-88  12:00a
	PRINT    COM      9011 02-02-88  12:00a
	RECOVER  COM      4268 02-02-88  12:00a
	SELECT   COM      4132 02-02-88  12:00a
	SORT     EXE      1946 02-02-88  12:00a
	SUBST    EXE     10552 02-02-88  12:00a
	SYS      COM      4725 02-02-88  12:00a
	TREE     COM      3540 02-02-88  12:00a
	       37 file(s)     344294 bytes

	Total files listed:
	       37 file(s)     344294 bytes
	                        1024 bytes free

### Directory of MS-DOS 3.30 (Disk 2)

	 Volume in drive A is MS330APP02 

	Directory of A:\

	BACKUP   COM     30280 02-09-88  12:00a
	DEBUG    COM     15866 02-09-88  12:00a
	EGA      CPI     49065 02-09-88  12:00a
	FC       EXE     15974 02-09-88  12:00a
	GWBASIC  EXE     80592 02-09-88  12:00a
	KEYBOARD SYS     19735 02-09-88  12:00a
	LCD      CPI     10752 02-09-88  12:00a
	LINK     EXE     43988 02-09-88  12:00a
	PRINTER  SYS     13559 02-09-88  12:00a
	RAMDRIVE SYS      8225 02-09-88  12:00a
	REPLACE  EXE     13234 02-09-88  12:00a
	RESTORE  COM     35650 02-09-88  12:00a
	SHARE    EXE      8608 02-09-88  12:00a
	XCOPY    EXE     11216 02-09-88  12:00a
	       14 file(s)     356744 bytes

	Total files listed:
	       14 file(s)     356744 bytes
	                           0 bytes free
