disks/pc/dos/microsoft/3.31/README.md
---
layout: page
title: Microsoft MS-DOS 3.31
permalink: /disks/pc/dos/microsoft/3.31/
---

Microsoft MS-DOS 3.31
---

### Directory of MS-DOS 3.31 (1.44M Disk)

	 Volume in drive A has no label

	Directory of A:\

	IO       SYS     23581 06-14-89  12:07p
	MSDOS    SYS     30672 06-11-89   4:33p
	COMMAND  COM     25276 06-01-89  12:00a
	4201     CPI     17089 06-01-89  12:00a
	5202     CPI       459 06-01-89  12:00a
	ANSI     SYS      1647 06-01-89  12:00a
	APPEND   EXE      5794 06-01-89  12:00a
	ASSIGN   COM      1530 06-01-89  12:00a
	ATTRIB   EXE     10656 06-01-89  12:00a
	BACKUP   COM     29976 06-19-89  12:29p
	CHKDSK   COM     11867 06-01-89  12:00a
	COMP     COM      4183 06-01-89  12:00a
	COUNTRY  SYS     11254 06-01-89  12:00a
	DATACOPY EXE     27313 05-25-89   2:34p
	DEBUG    COM     15944 06-01-89  12:00a
	DISKCOMP COM      5848 06-01-89  12:00a
	DISKCOPY COM      6264 06-01-89  12:00a
	DISPLAY  SYS     11259 06-01-89  12:00a
	DRIVER   SYS      1165 06-01-89  12:00a
	EDLIN    COM      7495 06-01-89  12:00a
	EGA      CPI     49065 06-01-89  12:00a
	EXE2BIN  EXE      3050 06-01-89  12:00a
	FASTOPEN EXE      3888 06-01-89  12:00a
	FC       EXE     15974 06-01-89  12:00a
	FDISK    COM     53275 06-01-89  12:00a
	FIND     EXE      6403 06-01-89  12:00a
	FORMAT   COM     19683 06-29-89  12:02p
	GRAFTABL COM      6216 06-01-89  12:00a
	GRAPHICS COM     13943 06-01-89  12:00a
	GWBASIC  EXE     80592 06-01-89  12:00a
	JOIN     EXE      9612 06-01-89  12:00a
	KEYB     COM      9041 06-01-89  12:00a
	KEYBOARD SYS     19735 06-01-89  12:00a
	LABEL    COM      2346 06-01-89  12:00a
	LINK     EXE     39172 06-01-89  12:00a
	MCONFIG  COM      1361 03-27-89  10:09a
	MODE     COM     15440 06-01-89  12:00a
	MORE     COM       282 06-01-89  12:00a
	NLSFUNC  EXE      3029 06-01-89  12:00a
	PRINT    COM      8995 06-01-89  12:00a
	PRINTER  SYS     13559 06-01-89  12:00a
	PROTO    SYS        54 12-06-88  10:50a
	RAMDRIVE SYS      8225 06-01-89  12:00a
	READPORT COM        39 10-27-88   8:34p
	REBOOT   COM        42 11-03-88   6:38a
	RECOVER  COM      5281 06-01-89  12:00a
	REPLACE  EXE     13234 06-01-89  12:00a
	RESTORE  COM     35650 06-01-89  12:00a
	SELECT   COM      4132 06-01-89  12:00a
	SETCMOS  COM        96 11-10-88   2:29a
	SETPORT  COM        24 12-09-88   7:02p
	SETSPD   COM       151 10-14-88   2:49p
	SETUP    COM        14 10-20-88   4:18p
	SHARE    EXE      8608 06-01-89  12:00a
	SORT     EXE      1946 06-19-89  12:30p
	SUBST    EXE     10552 06-01-89  12:00a
	SYS      COM      6127 06-01-89  12:00a
	TREE     COM      3540 06-01-89  12:00a
	UPDCFG   COM      7943 11-20-87   3:24p
	XCOPY    EXE     11216 06-01-89  12:00a
	       60 file(s)     740807 bytes

	Total files listed:
	       60 file(s)     740807 bytes
	                      700928 bytes free
